--- a/css/estilo.css
+++ b/css/estilo.css
@@ -435,13 +435,74 @@ h1,h2,h3,h4,h5{
 	}
   }
 
+.container-form{
+	width: 100%;
+	max-width: 1100px;
+	margin: auto;
+	display: grid;
+	grid-template-columns: repeat(2,1fr);
+	grid-gap: 50px;
+	margin-top: 90px;
+}
 
+.container-form h2{
+	margin-bottom: 15px;
+	font-size: 35px;
+}
 
+.container-form p{
+	font-size: 17px;
+	line-height: 1.6;
+	margin-bottom: 30px;
+}
 
+.container-form a{
+	font-size: 17px;
+	display: inline-block;
+	text-decoration: none;
+	width: 100%;
+	margin-bottom: 15px;
+	color: rgb(255, 255, 255);
+	font-weight: 700;
+}
 
+.container-form a i{
+	color: rgb(201, 204, 26);
+	margin-right: 18px;
+}
 
+.container-form form .campo, textarea{
+	width: 100%;
+	padding: 15px 10px;
+	font-size: 15px;
+	border: 1px solid;
+	margin-bottom: 20px rgb(201, 204, 26);
+	border-radius: 3px;
+	outline: 0px;
+}
 
+.container-form form textarea{
+	max-width: 530px;
+	min-width: 530px;
+	min-height: 140px;
+	max-height: 150px;
+}
 
+.container-form .btn-enviar{
+	padding: 15px;
+	font-size: 16px;
+	border: none;
+	outline: 0px;
+	background: rgb(201, 204, 26);
+	color: white;
+	border-radius: 3px;
+	cursor: pointer;
+	transition: all 300ms ease;
+}
+
+.container-form .btn-enviar:hover{
+	background: rgb(231, 190, 5);
+}
 
 
 
