--- a/css/estilo.css
+++ b/css/estilo.css
@@ -202,7 +202,7 @@ h1,h2,h3,h4,h5{
 	text-align: center;
 	text-decoration: none;
 	width: 120px;
-	background: #DE423A;
+	background: rgb(201, 204, 26)
 	color: #fff;
 	padding:10px;
 	margin: 10px auto;
@@ -542,4 +542,14 @@ h1,h2,h3,h4,h5{
 	}
   }
 
+  .our-team__txt{
+	color: white;
+  }
 
+  .our-team__title{
+	color: white;
+  }
+
+  .map{
+	margin-bottom: 40px;
+  }
