--- a/css/estilo.css
+++ b/css/estilo.css
@@ -202,7 +202,7 @@ h1,h2,h3,h4,h5{
 	text-align: center;
 	text-decoration: none;
 	width: 120px;
-	background: rgb(201, 204, 26)
+	background: rgb(201, 204, 26);
 	color: #fff;
 	padding:10px;
 	margin: 10px auto;
